# templates

./: README.md  flake.nix
python/: flake.nix
python-venv/: README.md  flake.nix  setup.cfg
