[metadata]
name = TODO
version = TODO
author = TODO
author_email = TODO
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = TODO
project_urls =
    Bug Tracker = TODO
classifiers =
    # TODO Check https://pypi.org/classifiers/

[options]
package_dir  =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  # TODO Adjust these
  click ==8.0.3
  matplotlib ==3.5.1
  numpy ==1.21.5
  pandas ==1.3.5
  scipy ==1.7.3

[options.packages.find]
where = src
